--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.59.13",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
     "install": "^0.13.0",
     "motion": "^11.14.4",
     "react": "^18.3.1",
